--- a/atlas.css
+++ b/atlas.css
@@ -104,3 +104,11 @@ span.site-type {
 	margin-left: 3px;
 	vertical-align: middle;
 }
+
+#legend {
+        border-style: solid;
+        border-width: 1.5px;
+        background-color: rgba(255, 255, 255, 0.5);
+        padding: 10px;
+        margin: 10px;
+  }
