--- a/atlas.css
+++ b/atlas.css
@@ -105,15 +105,25 @@ span.site-type {
 	vertical-align: middle;
 }
 
+#site-update {
+        color: #AAA;
+        font-style: italic;
+	margin-top: 10px;
+        margin-left: 1px;
+        text-align: left;
+        font-size: 0.7em;
+        vertical-align: bottom;
+}
+
 #legend {
         border-style: solid;
         border-width: 1.5px;
         background-color: rgba(255, 255, 255, 0.5);
         padding: 10px;
         margin: 10px;
-  }
+}
 
-  #legend div img {
+#legend div img {
         vertical-align: middle;
         margin: 5px;
-  }
+}
