--- a/atlas.css
+++ b/atlas.css
@@ -115,6 +115,24 @@ span.site-type {
         vertical-align: bottom;
 }
 
+span.site-version {
+	background-color: #FFDDCC;
+	border: 1px solid #E7E194;
+	color: #777;
+	font-size: 11px;
+	font-weight: normal;
+	padding: 1px 4px 1px 5px;
+        margin-left: 5px;
+	text-decoration: none;
+	white-space: nowrap;
+	border-radius: 8px;
+	-webkit-border-radius: 8px;
+	/*
+	font-size: 0.8em;
+	font-weight: italic;
+	color: #999;
+	*/
+}
 #legend {
         border-style: solid;
         border-width: 1.5px;
