--- a/atlas.css
+++ b/atlas.css
@@ -149,4 +149,8 @@ span.site-version {
 #legend h3 {
     margin-top : 3px;
 }
-
+#marker-groups img {
+    margin-top : 3px;
+     width: 25px;
+     height: 25px;
+}
