--- a/atlas.css
+++ b/atlas.css
@@ -149,8 +149,13 @@ span.site-version {
 #legend h3 {
     margin-top : 3px;
 }
+#marker-groups {
+    padding: 2px;
+}
 #marker-groups img {
-    margin-top : 3px;
-     width: 25px;
-     height: 25px;
+    
+    vertical-align: middle;
+     margin-right: 2px;
+     width: 15px;
+     height: 15px;
 }
