--- a/atlas.css
+++ b/atlas.css
@@ -122,8 +122,8 @@ span.site-type {
 }
 
 span.site-version {
-        background-color: #FFDDCC;
-        border: 1px solid #E7E194;
+        background-color: #F0F0F0;
+        border: 1px solid #BBBBBB;
         color: #777;
         font-size: 11px;
         font-weight: normal;
