--- a/public/css/atlas.css
+++ b/public/css/atlas.css
@@ -169,7 +169,9 @@ span.site-version {
 }
 .atlas-container {
         z-index: 1;
-        margin: 2px;
+        margin-top: 2px;
+        margin-left: 1px;
+        margin-right: 1px;
         z-index: 0;
 }
 .dropDownControl {
@@ -299,6 +301,15 @@ span.site-version {
         font-weight: bold;
         text-decoration: none;
         color: black;
+}
+#down-screen .fa {
+    margin-right: 3px;
+}
+.screen .fa {
+    margin-right: 8px;
+}
+#download {
+    width: 90px;
 }
 #user {
     text-align: center;
