--- a/public/css/atlas.css
+++ b/public/css/atlas.css
@@ -170,7 +170,7 @@ span.site-version {
 .atlas-container {
         z-index: 1;
         margin-top: 2px;
-        margin-left: 1px;
+        margin-left: 3px;
         margin-right: 1px;
         z-index: 0;
 }
@@ -319,4 +319,19 @@ span.site-version {
 .bubble-form {
     overflow: hidden;
 }
-.tooltip-inner {min-width: 250px; !important; }
+#fade input[type=checkbox] {
+-ms-transform: scale(0.8); /* IE */
+  -moz-transform: scale(0.8); /* FF */
+  -webkit-transform: scale(0.8); /* Safari and Chrome */
+  -o-transform: scale(0.8); /* Opera */
+  margin-right: 6px;
+  vertical-align: middle;
+  position: relative;
+  top: -3px;
+  *overflow: hidden;
+}
+#fade label {
+    display: block;
+    padding-left: 15px;
+    text-indent: -15px;
+}.tooltip-inner {min-width: 250px; !important; }
