--- a/public/css/atlas.css
+++ b/public/css/atlas.css
@@ -51,6 +51,8 @@ a.implementation-id {
         font-family: Arial, san-serif;
         font-size: 0.8em;
         max-width: 300px;
+        min-width: 150px;
+        margin-top: 3px;
 }
 .site-name {
         font-weight: bold;
@@ -250,6 +252,7 @@ span.site-version {
         padding-left: 6px;
         background-color: rgb(255, 255, 255);
         color: black;
+        max-height: 20px;
 }
 .dropDownItemDiv:hover, .checkboxContainer:hover{
         background-color: rgb(235, 235, 235);
@@ -324,14 +327,28 @@ span.site-version {
   -moz-transform: scale(0.8); /* FF */
   -webkit-transform: scale(0.8); /* Safari and Chrome */
   -o-transform: scale(0.8); /* Opera */
-  margin-right: 6px;
   vertical-align: middle;
   position: relative;
+  margin-right: 1px;
   top: -3px;
+  left: -3px;
   *overflow: hidden;
 }
 #fade label {
     display: block;
     padding-left: 15px;
     text-indent: -15px;
-}.tooltip-inner {min-width: 250px; !important; }
+}
+.tooltip-inner {
+    min-width: 250px; !important;
+}
+.site-fade {
+    font-size: 9px;
+    font-style: italic;
+    color: rgba(141, 141, 141, 1);
+    position: absolute;
+    right:12px;bottom:2px;
+}
+.toggle {
+        cursor:pointer;
+}
