ATLAS-96 : Align Last Updated and Why is this site fading away abels in bubble

--- a/public/css/atlas.css
+++ b/public/css/atlas.css
@@ -347,7 +347,9 @@ span.site-version {
     font-style: italic;
     color: rgba(141, 141, 141, 1);
     position: absolute;
-    right:12px;bottom:2px;
+    padding-bottom: 2px;
+    left:12px;
+    bottom:1px;
 }
 .toggle {
         cursor:pointer;
