--- a/public/css/atlas.css
+++ b/public/css/atlas.css
@@ -412,3 +412,10 @@ span.site-version {
     padding-top: 0px!important;
     padding-bottom: 0px!important;
 }
+.popover-content{
+	color: rgba(141, 141, 141, 1);
+	text-align: center;
+}
+.popover-content input[type="text"] {
+	margin-bottom:5px!important;
+}
