--- a/public/css/atlas.css
+++ b/public/css/atlas.css
@@ -155,6 +155,11 @@ span.site-version {
         color: #999;
         */
 }
+
+#version {
+    margin-left: 10px;
+    width: 70px;
+}
 #legend {
         border-style: solid;
         border-width: 1.5px;
