--- a/public/css/atlas.css
+++ b/public/css/atlas.css
@@ -173,7 +173,12 @@ span.site-version {
 #legend h3 {
         margin-top : 3px;
 }
-
+#groups {
+        width: 80px;
+}
+#fade {
+        border-top: solid 1px rgba(141, 141, 141, 1);
+}
 // Dropdown Control
 #marker-groups {
         padding-bottom: 1px;
@@ -183,6 +188,10 @@ span.site-version {
         margin-right: 4px;
         width: 10px;
         height: 10px;
+        opacity: 0.2;
+}
+.enabled img {
+        opacity: 1!important;
 }
 .atlas-container {
         z-index: 1;
@@ -346,7 +355,7 @@ span.site-version {
     margin-top : -10px;
     margin-bottom: 5px;
 }
-#fade input[type=checkbox] {
+#fade input[type=checkbox], #legend-group input[type=checkbox] {
 -ms-transform: scale(0.8); /* IE */
   -moz-transform: scale(0.8); /* FF */
   -webkit-transform: scale(0.8); /* Safari and Chrome */
@@ -358,7 +367,7 @@ span.site-version {
   left: -3px;
   *overflow: hidden;
 }
-#fade label {
+#fade label, #legend-group label {
     display: block;
     padding-left: 15px;
     text-indent: -15px;
@@ -420,4 +429,7 @@ span.site-version {
 }
 .popover-content input[type="text"] {
 	margin-bottom:5px!important;
+}
+#legend-version, #legend-type {
+    margin-left : 7px;
 }
