Ignoring images and enabling fading by defaul

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,7 +50,7 @@
     var otherVersion = 0;
     var images = [];
     var shadows = [];
-    var fadeOverTime = false;
+    var fadeOverTime = true;
     var legendGroups = 0;
     var viewParam = {
       site : null,
