--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 
   <script id="globalnav-script" src="https://id.openmrs.org/globalnav/js/app-optimized.js" type="text/javascript"></script>
 
-  <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false"></script>
+  <script type="text/javascript" src="https://maps.google.com/maps/api/js?key={{getenv('GOOGLE_MAPS_JS_API_KEY')}}"></script>
   <script type="text/javascript" src="lib/js/jquery-1.11.1.min.js"></script>
   <script type="text/javascript" src="lib/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="lib/js/gmap3.min.js"></script>
