ATLAS-141: Replace hardcode to use types and versions API

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,8 @@
   <script type="text/javascript" src="lib/js/bootbox.min.js"></script>
   <script type="text/javascript" src="js/htmlObjects/select.js"></script>
   <script type="text/javascript" src="js/distribution.js"></script>
+  <script type="text/javascript" src="js/type.js"></script>
+  <script type="text/javascript" src="js/version.js"></script>
   <script type="text/javascript" src="js/user.js"></script>
   <script type="text/javascript" src="js/atlas.js"></script>
   <script type="text/javascript" src="js/tools.js"></script>
