ATLAS-151: Created interface to manage types

--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -21,7 +21,7 @@
             <div class="navbar-inner-sm">
                 <div class="container">
                     <ul class="nav navbar-nav pull-left">
-                        <li><a href="/"><h3>OpenMRS Atlas</h3></a></li>
+                        <li><h3><a href="/">OpenMRS Atlas</a> - <a href="/admin">Admin Page</a></h3></li>
                     </ul>
                     <ul class="nav navbar-nav pull-right">
                        <li><a href="/logout">Logout</a></li>
