--- a/views/admin/types/editType.ejs
+++ b/views/admin/types/editType.ejs
@@ -4,7 +4,7 @@
     <div class="jumbotron">
         <h2>Edit Type</h2>
 
-        <form class="form-horizontal" action="/type/<%= id %>" method="post" role="form">
+        <form class="form-horizontal" role="form">
             <div class="form-group">
                 <label class="col-lg-2 control-label">Name</label>
                 <div class="col-lg-10">
@@ -21,7 +21,7 @@
                 
             <div class="form-group">
                 <div class="col-lg-offset-2 col-lg-10">
-                    <button type="submit" class="btn btn-primary">Save Type</button>
+                    <button type="submit" id="submit" class="btn btn-primary">Save Type</button>
                 </div>
             </div>
         </form>
@@ -38,13 +38,38 @@ function fetchType() {
             if (textStatus != "success") {
                 return;
             }
-            document.getElementById("name").value = data.name;
-            document.getElementById("icon").value = data.icon;
+            document.getElementById("name").value = data[0].name;
+            document.getElementById("icon").value = data[0].icon;
     });
 }
 
 fetchType();
-    
+
+$("#submit").click(function (e) {
+    e.preventDefault();
+    var submitbtn = document.getElementById("submit");
+    submitbtn.disabled = true;
+
+    var id = $("#typeid").val();
+    var name = $("#name").val().trim();
+    var icon = $("#icon").val().trim();
+    var json = JSON.stringify({ name: name, icon: icon });
+    $.ajax({
+      url: "/type/"+id,
+      type: "PATCH",
+      data: json,
+      dataType: "text",
+    })
+    .done(function (response) {
+        console.log(response);
+        submitbtn.disabled = false;
+    })
+    .fail(function (jqXHR) {
+        submitbtn.disabled = false;
+        console.log("Error saving marker type - Please try again ! - " + jqXHR.statusText);
+    });
+});
+
 </script>
         
 <% include ../partials/footer %>
