--- a/views/admin/distributions/newDistribution.ejs
+++ b/views/admin/distributions/newDistribution.ejs
@@ -43,7 +43,9 @@ $("#submit").click(function (e) {
       url: "/distribution",
       type: "POST",
       data: json,
-      dataType: "text",
+      dataType: "json",
+      processData: false,
+      contentType: "application/json",
     })
     .done(function (response) {
         console.log(response);
