--- a/views/admin/types/editType.ejs
+++ b/views/admin/types/editType.ejs
@@ -58,7 +58,9 @@ $("#submit").click(function (e) {
       url: "/type/"+id,
       type: "PATCH",
       data: json,
-      dataType: "text",
+      dataType: "json",
+      processData: false,
+      contentType: "application/json",
     })
     .done(function (response) {
         console.log(response);
