ATLAS-181: Allow any click to dismiss alerts

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -122,7 +122,7 @@
         $.ajax({url: "/markers?username="+currentUser})
           .always(function (data, textStatus) {
               if (textStatus != "success") {
-                  bootbox.alert("Error fetching data for sites ! - " + data.statusText);
+                  bootbox.alert({ message: "Error fetching data for sites ! - " + data.statusText, backdrop: true });
                   return;
               }
               auth_site = data;
