ATLAS-176: Make it easier for a user to spot his own markers

--- a/public/css/atlas.css
+++ b/public/css/atlas.css
@@ -356,7 +356,7 @@ span.site-version {
     margin-top : -10px;
     margin-bottom: 5px;
 }
-#fade input[type=checkbox], #legend-group input[type=checkbox], #legend-clusters input[type=checkbox] {
+#fade input[type=checkbox], #legend-group input[type=checkbox], #legend-clusters input[type=checkbox], #mymarkers input[type=checkbox] {
 -ms-transform: scale(0.8); /* IE */
   -moz-transform: scale(0.8); /* FF */
   -webkit-transform: scale(0.8); /* Safari and Chrome */
@@ -368,7 +368,7 @@ span.site-version {
   left: -3px;
   *overflow: hidden;
 }
-#fade label, #legend-group label, #legend-clusters label {
+#fade label, #legend-group label, #legend-clusters label, #mymarkers label {
     display: block;
     padding-left: 15px;
     text-indent: -15px;
