ATLAS-126: Created RSS feed of updates to Atlas data

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -219,6 +219,7 @@
 <input type="hidden" id="user-name" value= <%= user?user.cn:"" %> />
 <input type="hidden" id="user-email" value= <%= user?user.mail:"" %> />
 <input type="hidden" id="user-admin" value= <%= user?(user.admin?"true":"false"):"false" %> />
+<input type="hidden" id="marker-id" value= <%= marker_id?marker_id:"" %> />
 
 </body>
 
