ATLAS-178: Support upload of marker images

--- a/public/css/atlas.css
+++ b/public/css/atlas.css
@@ -438,3 +438,14 @@ span.site-version {
 .soft-hidden{
     display: none;
 }
+
+#image-hint {
+    font-size: 12px;
+    font-style: italic;
+}
+
+#image-error {
+    font-size: 12px;
+    display: none;
+    color: red;
+}
