--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,6 +51,9 @@
     var fadeOverTime = true;
     var legendGroups = 0;
     var showAllMarkers = true;
+    var imageData = null;
+    var imageError = false;
+    var maxImageUploadSize = 150*1024;
     var viewParam = {
       site : null,
       position : new google.maps.LatLng(15,15),
