--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,6 +54,7 @@
     var imageData = null;
     var imageError = false;
     var maxImageUploadSize = 150*1024;
+    var showAdvancedOptions = false;
     var viewParam = {
       site : null,
       position : new google.maps.LatLng(15,15),
