ATLAS-168: Notify users when their marker is fading

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -224,6 +224,10 @@
 <input type="hidden" id="user-email" value= <%= user?user.mail:"" %> />
 <input type="hidden" id="user-admin" value= <%= user?(user.admin?"true":"false"):"false" %> />
 <input type="hidden" id="marker-id" value= <%= marker_id?marker_id:"" %> />
+<input type="hidden" id="update-marker" value= <%= update_marker?update_marker:"" %> />
+<input type="hidden" id="delete-marker" value= <%= delete_marker?delete_marker:"" %> />
+<input type="hidden" id="unsubscribed" value= <%= unsubscribed?unsubscribed:"" %> />
+<input type="hidden" id="unsubscribeDialog" value= <%= unsubscribeDialog?unsubscribeDialog:"" %> />
 
 </body>
 
